--- a/bruceHome.html
+++ b/bruceHome.html
@@ -25,15 +25,52 @@
 		    <div class="collapse navbar-collapse" id="bruceHomeNavbar">
 		      <ul class="nav navbar-nav navbar-right">
 		      	<!-- Home, Reviews, About Me, FAQs, Order Form, Contact Me -->
-		        <li class="current selector"><a href="#"><h4 class="selector">Home</h4></a></li>
-		        <li class="selector"><a href="#"><h4 class="selector">Reviews</h4></a></li>
-		        <li class="selector"><a href="#"><h4 class="selector">About Bruce</h4></a></li>
-		        <li class="selector"><a href="#"><h4 class="selector">FAQs</h4></a></li>
-		        <li class="selector"><a href="#"><h4 class="selector">Order Form</h4></a></li>
-		        <li class="selector"><a href="#"><h4 class="selector">Contact Me</h4></a></li>
+		        <li class="current "><a href="#"><h4>Home</h4></a></li>
+		        <li><a href="#"><h4>Reviews</h4></a></li>
+		        <li><a href="#"><h4>About Bruce</h4></a></li>
+		        <li><a href="#"><h4>FAQs</h4></a></li>
+		        <li><a href="#"><h4>Order Form</h4></a></li>
+		        <li><a href="#"><h4>Contact Me</h4></a></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
+		<div class="container body">
+			<div class="row">
+				<div class="col-xs-12 title">
+					<h1>Welcome to Bruce Nelson's Combat Leather</h1><br>
+				</div>
+				<div class="col-xs-12 col-md-4">
+					<img src="images/Bruce-Nelson.jpg">
+				</div>
+				<div class="col-xs-12 col-md-6">
+					<p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.</p>
+
+					<p>The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
+
+					<p>You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.</p>
+
+					<p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.</p>
+				</div>
+				<div class="col-xs-12 col-md-2 sideMenu">
+						<h2 class="menu">Main Menu</h2>
+						<p>> <a href="#" class="menu">Holsters</a></p>
+						<p>> <a href="#" class="menu">Ammo Pouches</a></p>
+						<p>> <a href="#" class="menu">Belts</a></p>
+						<p>> <a href="#" class="menu">Catalog</a></p>
+
+						<h2 class="menu">User Menu</h2>
+						<p>> <a href="#" class="menu">Holster Fit</a></p>
+						<p>> <a href="#" class="menu">Holster Materials and Maintenance</a></p>
+						<p>> <a href="#" class="menu">Payment Information</a></p>
+						<p>> <a href="#" class="menu">Testimonials and Reviews</a></p>
+						<p>> <a href="#" class="menu">Combat Shooting</a></p>
+						<p>> <a href="#" class="menu">Modern Pistol Technique</a></p>
+						<p>> <a href="#" class="menu">Gallery</a></p>
+						<p>> <a href="#" class="menu">Links</a></p>
+				</div>
+			</div>
+			<!-- Website Built by Joey Hennessey -->
+		</div>
 	</body>
 </html>
